fix: improve readability on non-retina screen

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,5 +15,5 @@ body {
 }
 body {
   font-family: "JetBrains Mono", monospace;
-  @apply bg-neutral-100 font-medium tracking-tighter text-neutral-950;
+  @apply bg-neutral-100 tracking-tight text-neutral-950;
 }
